[gd_scene load_steps=4 format=3 uid="uid://cxki1a3to428f"]

[ext_resource type="Script" path="res://engine/game/GameMenu.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://d4hsir7p4gfrw" path="res://engine/gui/SaveGameDialog.tscn" id="2_rix5l"]
[ext_resource type="PackedScene" uid="uid://dlqbsn1hmhe40" path="res://engine/gui/LoadGameDialog.tscn" id="3_4sayf"]

[node name="GameMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Buttons" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -85.5
offset_top = -58.0
offset_right = 85.5
offset_bottom = 58.0

[node name="Resume" type="Button" parent="Buttons"]
layout_mode = 2
text = "Resume"

[node name="Save" type="Button" parent="Buttons"]
layout_mode = 2
text = "Save"

[node name="Load" type="Button" parent="Buttons"]
layout_mode = 2
text = "Load"

[node name="Quit" type="Button" parent="Buttons"]
layout_mode = 2
text = "Quit game"

[node name="SaveGameDialog" parent="." instance=ExtResource("2_rix5l")]
visible = false

[node name="LoadGameDialog" parent="." instance=ExtResource("3_4sayf")]
visible = false

[connection signal="pressed" from="Buttons/Resume" to="." method="onResumePressed"]
[connection signal="pressed" from="Buttons/Save" to="." method="onSavePressed"]
[connection signal="pressed" from="Buttons/Load" to="." method="onLoadPressed"]
[connection signal="pressed" from="Buttons/Quit" to="." method="onQuitPressed"]
[connection signal="file_selected" from="SaveGameDialog" to="." method="_on_save_file_selected"]
[connection signal="file_selected" from="LoadGameDialog" to="." method="_on_load_file_selected"]
